Fix toggle drop down on smaller screens

--- a/web/src/components/NavBar.css
+++ b/web/src/components/NavBar.css
@@ -1,4 +1,5 @@
 nav.navbar {
+    display: flex;
     justify-content: space-between;
     padding: 18px 0;
     position: fixed;
@@ -6,11 +7,9 @@ nav.navbar {
     top: 0;
     z-index: 9999;
     transition: 0.32s ease-in-out;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
     backdrop-filter: blur(2px);
     background-color: transparent;
-    /* height: 60px; */
-    /*todo*/
 }
 
 nav.navbar::before {
@@ -43,7 +42,7 @@ nav.navbar::before {
 }
 
 nav.navbar.scrolled {
-    padding: 6px 0;
+    padding: 7px 0;
     /* background-color: #171717; */
 }
 
@@ -180,6 +179,7 @@ nav.navbar .navbar-toggler:focus {
     box-shadow: none;
 }
 
+
 nav.navbar .navbar-toggler-icon {
     width: 24px;
     height: 17px;
@@ -231,17 +231,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .navbar-collapse {
     justify-content: flex-end;
     /* Aligns content to the right */
-}
-
-.navbar-collapse.collapse {
-    display: none;
-    /* Default Bootstrap behavior for collapsed state */
-}
-
-.navbar-collapse.collapse.show {
-
-    display: flex;
-    /* When expanded, show and apply flex layout */
 }
 
 .vvd {
